gearset/main/default/objects/Account/fields/Number_field__c.field-meta.xml
<CustomField>
    <fullName>Number_field__c</fullName>
    <label>Number field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>