gearset/main/default/objects/Account/fields/Number_of_licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_licenses__c</fullName>
    <label>Number of licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>