gearset/main/default/objects/Account/fields/Student_Register__c.field-meta.xml
<CustomField>
    <fullName>Student_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Student has registered</description>
    <label>Student Register</label>
    <type>Checkbox</type>
</CustomField>