gearset/main/default/objects/Account/fields/Transaction_renewal_c__c.field-meta.xml
<CustomField>
    <fullName>Transaction_renewal_c__c</fullName>
    <defaultValue>Today()+7</defaultValue>
    <label>Transaction renewal</label>
    <type>Date</type>
</CustomField>