gearset/main/default/objects/Account/fields/Use_Survey_c__c.field-meta.xml
<CustomField>
    <fullName>Use_Survey_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Want to add a new survey entry</description>
    <label>Use Survey</label>
    <type>Checkbox</type>
</CustomField>