gearset/main/default/objects/Account/fields/ValuePercentage__c.field-meta.xml
<CustomField>
    <fullName>ValuePercentage__c</fullName>
    <formula>ValueRate__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValuePercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>