gearset/main/default/objects/Account/fields/ValueRate__c.field-meta.xml
<CustomField>
    <fullName>ValueRate__c</fullName>
    <defaultValue>3</defaultValue>
    <label>ValueRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>