gearset/main/default/objects/Account/recordTypes/Type1.recordType-meta.xml
<RecordType>
    <fullName>Type1</fullName>
    <active>true</active>
    <description>our record type1</description>
    <label>Type1</label>
</RecordType>